--- a/aizama/css/plantel.css
+++ b/aizama/css/plantel.css
@@ -2,12 +2,19 @@ h1{
 	text-align: center;
     padding: 20px;
     font-family: "Roboto",arial,sans-serif;
-    color: #6276b1;
+    color: white;
     text-transform: uppercase;
-    font-weight: normal;
+    font-weight: 700;
 }
-
-
+h3{
+    font-size: .8em;
+}
+label{
+    cursor: pointer;
+}
+body{
+    background: url(../images/fondo_login.gif);
+}
 
 
 .main-div{
@@ -15,6 +22,7 @@ h1{
     flex-wrap: wrap;
     margin: auto;
     max-width: 1100px;
+    width: 100%;
     gap: 30px;
     justify-content: center;
 }
@@ -28,6 +36,7 @@ h1{
     flex-direction: column;
     gap: 10px;
     justify-content: space-around;
+    background: white;
 }
 .cuadro-div{
 	display: flex;
@@ -35,9 +44,55 @@ h1{
     justify-content: center;
 }
 .cuadro-div img{
-	width: 130px;
+	width: 100px;
+    border-radius: 50px 10px;
 }
 .info-div{
 	font-family: "Roboto",arial,sans-serif;
 	color: #48778f;
+    font-size: .8em;
+}
+.car-asignatura{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background: white;
+    min-width: 300px;
+    font-family: "Roboto",arial,sans-serif;
+    color: #48778f;
+    max-height: 80%;
+    overflow-y: auto;
+}
+.div-perfil-docente{
+    text-align: center;
+
+}
+.div-perfil-docente img{
+    min-width: 200px;
+    max-width: 150px;
+    border-radius: 100px 20px;
+}
+.nombre-docente{
+    text-align: center;
+    font-size: 1.8em;
+}
+.materias p{
+    margin-left: 10px;
+    font-size: .8em;
+    line-height: 5px;
+}
+.btn-close img {
+    position: absolute;
+    width: 20px;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+    z-index: 50;
+}
+.oculto{
+    display: none;
 }
