--- a/aizama/css/cuadro_estadistico_adm.css
+++ b/aizama/css/cuadro_estadistico_adm.css
@@ -10,7 +10,6 @@
 .title {
     width: 300px;
     margin: 25px auto;
-    /* border: 1px solid var(--c1); */
     border-radius: 5px;
     box-shadow: 0 3px 10px rgb(10 37 64 / 40%);
     background-color: var(--c5);
@@ -79,7 +78,7 @@ h3{
     display: none;
 }
 .item_alumnos{
-    font-size: .8em;
+    font-size: .72em;
     display: flex;
     padding: 5px;
     cursor: pointer;
@@ -150,11 +149,65 @@ h3{
     width: 100%;
     height: 30px;
     border-top: 1px solid #ccc;
+    font-size: .75em;
+    color: #9d9c9c;
+    position: relative;
+}
+.table-grafic tbody tr td div{
+    position: absolute;
+    top: -7px;
+    background: white;
+    padding: 0 4px 0 0px;
+}
+.table-grafic-bar{
+    display: flex;
+    position: absolute;
+    bottom: 11px;
+    width: 100%;
+}
+.table-grafic-bar tbody{
+    width: 100%;
+    display: flex;
+}
+.table-grafic-bar tbody tr td div{
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    border-collapse: collapse;
+    padding: 5px;
+    color: #c1c1c1;
+    border-radius: 2px;
+    background-color: blue;
+    letter-spacing: .1em;
+    white-space: nowrap;
+}
+.table-grafic-bar tbody tr{
+    display: flex;
+    width: 90%;
+    align-items: flex-end;
+    justify-content: space-around;
+    margin: 0 auto 0px 20px;
+}
+.table-grafic-bar tbody tr td{
+    height: 300px;
+    display: flex;
+    font-size: .75em;
+    align-items: flex-end;
+}
+.title-grafico{
+    text-align: center;
+    color: var(--c1);
+    letter-spacing: .1em;
+    position: absolute;
+    top: 4px;
+    font-size: .8em;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 .grafic-background{
-    position: absolute;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin: 20px 0;
+    position: relative;
 }
