--- a/aizama/css/cuadro_estadistico_adm.css
+++ b/aizama/css/cuadro_estadistico_adm.css
@@ -70,10 +70,63 @@ h3{
     border-radius: 5px;
     border: 1px solid #ccc;
     box-sizing: border-box;
+    color: var(--c1);
+    width: 120px;
+}
+.div-options{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    padding-bottom: 10px;
+}
+.div-options-avanced{
+    box-shadow: 0 3px 10px rgb(10 37 64 / 40%);
+    padding-top: 10px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    border-radius: 5px;
+    padding-bottom: 6px;
+}
+.selected{
+    background-color: #2fc6c7;
+}
+.selecter{
+    height: 5px;
+}
+.item-materia{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    padding: 5px;
+    cursor: pointer;
+}
+.item-materia:hover{
+    background-color: #ccc;
+}
+.btn-options{
+    width: 150px;
+    padding: 10px;
+    /*border: 1px solid #138e8f;*/
+    border: none;
+    color: white;
+    background: #138e8f;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+.btn-options:hover{
+    background: #129c9d;
+}
+.div-main-content-options{
+    padding: 0 10px;
 }
 .input-date:focus {
     outline-color: #ccc;
-}   
+}  
+.select-curso{
+    text-align: center;
+} 
 .oculto{
     display: none;
 }
@@ -86,6 +139,10 @@ h3{
 .item_alumnos:hover {
     background-color: #ccc;
 }
+.div-content-lista{
+    height: calc(100vh - 307px);
+    overflow-y: auto;
+}
 .div-lista-alumnos{
     max-width: 360px;
     width: 100%;
@@ -95,7 +152,7 @@ h3{
     color: var(--c1);
 }
 .div-search{
-    margin-bottom: 10px;
+    text-align: end;
 }
 .div-codalu{
     width: 40px;
@@ -103,6 +160,7 @@ h3{
 .div-main-content{
     display: flex;
     padding: 10px;
+    align-items: flex-start;
 }
 .div-cuadro-estadisticas{
     box-shadow: 0 3px 10px rgb(10 37 64 / 40%);
@@ -110,6 +168,7 @@ h3{
     padding: 10px;
     width: 100%;
     position: relative;
+    height: calc(100vh - 216px);
 }
 .div-head-info{
     position: absolute;
@@ -122,6 +181,20 @@ h3{
     width: 100%;
     justify-content: space-between;
     border-bottom: 1px solid #ccc;
+    min-height: 120px;
+}
+.div-head-info2{
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    font-size: .7em;
+    width: 100%;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    min-height: 65px;
 }
 .t-estadisticas{
     text-align: center;
@@ -133,12 +206,22 @@ h3{
     height: 100%;
     margin-top: 100px;
 }
+.div-content-graficos2 {
+    display: flex;
+    height: 100%;
+    margin-top: 50px;
+}
 .grafico-notas-materias{
     width: 100%;
     position: relative;
 }
+.div-img-est{
+    max-height: 100px; 
+    overflow-y: hidden;
+    border-radius: 5px;
+}
 .img-est{
-    
+    border-radius: 5px;
 }
 .table-grafic{
     border-collapse: collapse;
@@ -179,6 +262,20 @@ h3{
     background-color: blue;
     letter-spacing: .1em;
     white-space: nowrap;
+    cursor: pointer;
+}
+.table-grafic-bar2 tbody tr td div {
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    border-collapse: collapse;
+    padding: 5px;
+    color: #c1c1c1;
+    border-radius: 2px;
+    background-color: blue;
+    letter-spacing: .1em;
+    white-space: nowrap;
+    cursor: pointer;
+    font-size: .75em;
 }
 .table-grafic-bar tbody tr{
     display: flex;
@@ -208,6 +305,32 @@ h3{
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 20px 0;
     position: relative;
+    width: 550px;
+}
+.grafic-background2 {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    position: relative;
+    width: 100%;
+}
+.content-graficos{
+    margin-top: 20px;
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+    gap: 20px;
+    height: calc(100vh - 392px);
+    overflow-y: auto;
+}
+.content-graficos2 {
+    margin-top: 20px;
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+    gap: 20px;
+    height: calc(100vh - 350px);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
