--- a/aizama/css/estiloDoc.css
+++ b/aizama/css/estiloDoc.css
@@ -4,7 +4,7 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	font-family:Arial;
+	font-family:'Segoe UI', Tahoma, sans-serif;
 }
 .imgUser{
 	padding: 0px;
