--- a/aizama/css/rendimiento_doc.css
+++ b/aizama/css/rendimiento_doc.css
@@ -40,17 +40,25 @@
     flex-direction: column;
     row-gap: 5px;
     position: relative;
+    overflow-y: auto;
 }
 .box-content{
-	border-radius: 5px;
-    box-shadow: 0 1px 3px rgb(10 37 64 / 40%);
     height: calc(100vh - 122px);
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 .div-select{
 	padding: 5px;
 	text-align: center;
 	color: var(--c1);
+}
+.div-lista-alumnos{
+	box-shadow: 0 1px 3px rgb(10 37 64 / 40%);
+	border-radius: 5px;
+	height: calc(100vh - 177px);
+	overflow-y: hidden;
 }
 .oculto{
 	display: none;
@@ -80,7 +88,9 @@
 	background: #ccc;
 }
 .lista-alumnos{
-	padding: 0 50px;
+	padding: 3px 50px;
+	overflow-y: auto;
+    height: calc(100% - 50px);
 }
 .table{
 	margin: auto;
@@ -136,6 +146,13 @@
 .div-textarea{
 	display: flex;
     align-items: center;
+    padding: 3px;
+    gap: 5px;
+}
+.div-option-text{
+	display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 .selected{
 	background-color: #02898f;
@@ -180,6 +197,15 @@ textarea:focus{
     cursor: pointer;
 }
 .div-formulario{
+	position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00000082;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+.div-formulario2{
 	position: absolute;
     width: 100%;
     height: 100%;
@@ -233,4 +259,84 @@ textarea:focus{
 }
 .div-check-label div input{
 	cursor: pointer;
+}
+.header-actividad{
+	width: 100%;
+    height: 50px;
+    box-shadow: 0 1px 3px rgb(10 37 64 / 40%);
+    border-radius: 5px;
+}
+.btn-submit{
+	width: 150px;
+	padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #00b15f;
+    font-size: 1.3em;
+    color: white;
+    cursor: pointer;
+}
+
+.btn-submit2{
+	width: 150px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #05488b;
+    font-size: 1.3em;
+    color: white;
+    cursor: pointer;
+}
+.btn-danger{
+	width: 150px;
+	padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #ff1313;
+    font-size: 1.3em;
+    color: white;
+    cursor: pointer;
+}
+.btn-close img {
+    position: absolute;
+    width: 20px;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+    z-index: 50;
+}
+.input-data{
+	width: 100%;
+    max-width: 100px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.input-data:focus{
+	outline: #ccc;
+}
+.div-input-data{
+	display: flex;
+    flex-wrap: nowrap;
+    gap: 5px;
+}
+.crono-display{
+	text-align: center;
+    font-size: 2.5em;
+    border-radius: 5px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    width: 250px;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-around;
+}
+.crono-display h2{
+	font-size: 1.2em;
+}
+.div-button-crono{
+	text-align: center;
+	display: flex;
+    justify-content: center;
+    gap: 10px;
 }
