--- a/aizama/css/colors.css
+++ b/aizama/css/colors.css
@@ -5,5 +5,5 @@
 	--background-green-selected: #40bfa3;
 	--background-cursor-hover: #b2ffee;
 	--background-blocked: #0000005c;
-	--text-deescription: #0c1c3b;
+	--text-description: #0c1c3b;
 }
