--- a/aizama/css/rendimiento_doc.css
+++ b/aizama/css/rendimiento_doc.css
@@ -63,6 +63,11 @@
 .oculto{
 	display: none;
 }
+.div-descrip{
+    display: flex;
+    gap: 5px;
+}
+}
 .div-categoria h2{
 	text-align: center;
     color: var(--c1);
@@ -262,9 +267,10 @@ textarea:focus{
 }
 .header-actividad{
 	width: 100%;
-    height: 50px;
+    height: 68px;
     box-shadow: 0 1px 3px rgb(10 37 64 / 40%);
     border-radius: 5px;
+    padding: 5px;
 }
 .btn-submit{
 	width: 150px;
