--- a/aizama/css/evaluaciones_seleccion_doc.css
+++ b/aizama/css/evaluaciones_seleccion_doc.css
@@ -7,23 +7,37 @@
 	--c4 : #fafafa;/*Background*/
 	--c5 : #fff;
 }
+.p-5{
+	padding: 5px;
+}
+.p-10{
+	padding: 10px;
+}
 .container{
-	margin-top: 10px;
 	background-color: var(--c4);
-	padding-right: 10px;
+	padding:0 10px;
 	color: var(--c1);
 }
-.title{
-    width:100%;
-    max-width: 500px;
-	margin: 25px auto;
+.fs09{
+	font-size: .9em;
+}
+.fs1{
+	font-size: 1em;
+}
+.fs1-5{
+	font-size: 1.3em;
+}
+.title2{
+  width:100%;
+  max-width: 500px;
+	margin: auto;
 	/*border: 1px solid var(--c1);*/
 	border-radius: 5px;
 	box-shadow: 0 3px 10px rgb(10 37 64 / 40%);
 	background-color: var(--c5);
 	cursor: pointer;
 }
-.title h1 {
+.title2 h1 {
 	text-align: center;
 	font-size: .9em;
 	text-transform: uppercase;
@@ -31,7 +45,7 @@
 	
 }
 .div-add{
-	padding: 20px;
+	padding: 10px;
 	text-align: center;
 	display: flex;
     flex-direction: column;
@@ -43,7 +57,6 @@
 	font-size: .9em;
 }
 .descripcion{
-	width: 100%;
 	border:1px solid #ccc;
 	border-radius: 5px;
 	padding: 10px !important;
@@ -65,7 +78,6 @@
 	flex-wrap: nowrap;
 	align-items: center;
 	margin: auto;
-	width: 100%;
 	max-width: 800px;
 	padding: 10px;
 	border-radius: 5px;
@@ -77,7 +89,6 @@
 	display: flex;
     flex-wrap: nowrap;
     margin: auto;
-    width: 100%;
     max-width: 800px;
     padding: 10px;
     border-radius: 5px;
@@ -164,6 +175,19 @@
 	box-sizing: border-box;
 
 }
+.formulario{
+	  max-width: 500px;
+    margin: auto;
+}
+.div-formulario{
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 5px;
+	width: 100%;
+}
+.ta-l{
+	text-align: left;
+}
 .input-data:focus {
   	outline-color: #ccc;
 }
@@ -172,6 +196,14 @@
 	flex-wrap: nowrap;
 	align-items: center;
 	margin: 10px 0px;
+}
+.div-input{
+	display: flex;
+  flex-direction: column;
+  margin-top: 5px;
+}
+.div-input label{
+	color: #868686;
 }
 .div-inputs div{
 	width: 100%;
@@ -214,8 +246,14 @@
 	border-radius: 35px;
 	cursor: pointer;
 }
+.img-close{
+	position: absolute;
+  width: 20px;
+  right: 4px;
+  cursor: pointer;
+}
 /*Boton de cierre de tarjeta*/
-.btn-close img {
+.btn-close2 img {
     position: absolute;
     width: 20px;
     right: 5px;
@@ -353,6 +391,17 @@ h3{
 .submit2:hover{
 	background: var(--c1a);
 }
+.div-img-preg{
+	display: flex; 
+	padding:5px; 
+	width:100%; 
+	max-width: 360px; 
+	margin: 15px auto; 
+	justify-content: center; 
+	border: 1px solid #ccc; 
+	border-radius: 5px;
+	position: relative;
+}
 .danger2{
 	padding: 7px 20px;
   background: var(--c3);
@@ -366,8 +415,14 @@ h3{
 .danger2:hover{
 	background: var(--c3a);
 }
+.btn-submit-cancel{
+	display: flex;
+  gap: 10px;
+  padding: 20px;
+  justify-content: center;
+}
 @media screen and (min-width: 361px){
-	.title{
+	.title2{
 	    width:100%;
 	    max-width: 800px;
 		margin: 25px auto;
@@ -377,7 +432,7 @@ h3{
 		background-color: var(--c5);
 		cursor: pointer;
 	}
-	.title h1 {
+	.title2 h1 {
 		text-align: center;
 		font-size: 1em;
 		text-transform: uppercase;
@@ -404,6 +459,4 @@ h3{
 	    align-items: center;
 	    justify-content: center;
 	}
-
-	
 }
