--- a/aizama/css/evaluacion_inicial_11.css
+++ b/aizama/css/evaluacion_inicial_11.css
@@ -80,7 +80,7 @@
     left: 0;
 }
 .btn-save{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 50%;
     transform: translate(-50%, 0);
@@ -89,22 +89,27 @@
     width: 50px;
     cursor: pointer;
 }
-
+.div-content-face{
+    position: relative;
+}
 @media screen and (min-width: 600px){
     .img-number{
-        width: 90px;
+        width: 75px;
+        position: absolute;
+        top: 0px;
+        left: 0px;
     }
     .div-content-face:first-child{
-        width: 600px;
+        width: 700px;
     }
     .div-content-faces,.div-content-faces2{
         display: flex;
         flex-direction: row;
         gap: 20px;
-        padding: 50px 0;
+
     }
     .div-content-faces img{
-        width: 80px;
+        width: 75px;
         position: relative;
         top: 0;
         left: 0;
