--- a/aizama/css/evaluacion_inicial_doc.css
+++ b/aizama/css/evaluacion_inicial_doc.css
@@ -5,7 +5,7 @@
 	--color4:rgb(224, 218, 216); /*Gris*/
 	--color5:rgb(186, 214, 206); /*verde*/
 }
-.div-title{
+.title{
 	text-align: center;
     color: var(--color1);
     text-transform: uppercase;
