--- a/aizama/css/evaluacion_inicial_doc.css
+++ b/aizama/css/evaluacion_inicial_doc.css
@@ -24,3 +24,24 @@
 	background: var(--background-cursor-hover);
 	color: var(--background-green-selected);
 }
+.container{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	gap: 10px;
+	align-items: stretch;
+}
+.card-body{
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.btn{
+	width: 110px;
+}
+.card{
+	width: 300px;
+}
+.main-container{
+	margin-bottom: 20px;
+}
