--- a/aizama/css/colors.css
+++ b/aizama/css/colors.css
@@ -1,9 +1,19 @@
 :root{
 	--danger:red;
 	--title: white;
+	--title-dark: #656f73;
 	--background-green-dark: #1c8779;
 	--background-green-selected: #40bfa3;
 	--background-cursor-hover: #b2ffee;
 	--background-blocked: #0000005c;
 	--text-description: #0c1c3b;
+	--text-light-soft: #a7a7a7;
+	--text-light:#afafaf;
+	--background-dark-soft: #0C1317;
+	--border-list: rgba(134, 150, 160, 0.15);
+	--background-ligth-transparent: rgba(255, 255, 255, 0.1);
+	--background-ligth-transparent-send: rgba(0, 197, 197, 0.1);
+	--badge-red: rgb(157 12 12 / 90%);
+	--background-blue-transparent: rgb(0 247 202 / 10%);
+	--white-rgb: 255, 255, 255;
 }
