--- a/aizama/css/header_adm.css
+++ b/aizama/css/header_adm.css
@@ -4,7 +4,7 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	font-family:Arial;
+	font-family: Segoe UI, Helvetica Neue, Helvetica, Lucida Grande, Arial, Ubuntu, Cantarell, Fira Sans, sans-serif;
 }
 .imgUser{
 	padding: 0px;
