--- a/aizama/css/colors.css
+++ b/aizama/css/colors.css
@@ -19,4 +19,5 @@
 	--badge-blue: rgb(12 46 171 / 90%);
 	--background-blue-transparent: rgb(0 247 202 / 10%);
 	--white-rgb: 255, 255, 255;
+	--background-blue-satured: rgb(2 46 57 / 60%);
 }
